--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -1,3 +1,1 @@
-// you can change config here
-$colors: #c0392b, #d35400, #f39c12, #27ae60, #16a085, #2980b9, #8e44ad, #2c3e50,
-  #7f8c8d !default;
+$theme-color: #ffd6e7, #ffb5d8, #ffb5d8, #ff9ecd, #ff9ecd, #ff87c3, #ff70b9, #ff70b9,  
