--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'TwemojiFlags'; /* 专用字体名称 */
-    src: url('https://cdn.jsdelivr.net/npm/twemoji-colr-font@14.0.2/twemoji.woff2') format('woff2');
+    src: url('https://gcore.jsdelivr.net/npm/twemoji-colr-font@14.0.2/twemoji.woff2') format('woff2');
     unicode-range: U+1F1E6-1F1FF; /* 限定仅国旗Emoji区域（区域指示符号） */
   }
   
