变更布局断点和标题，避免当前导航栏内容较多导致的显示问题

--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -1,1 +1,6 @@
-$theme-color: #ffd6e7, #ffb5d8, #ffb5d8, #ff9ecd, #ff9ecd, #ff87c3, #ff70b9, #ff70b9,  
+$theme-color: #ffd6e7, #ffb5d8, #ffb5d8, #ff9ecd, #ff9ecd, #ff87c3, #ff70b9, #ff70b9;
+$pc: 1440px;
+$laptop: 1440px;
+$pad: 1400px;
+$tablet: 1000px;
+$mobile: 480px;
